--- a/authentication/templates/auth.html
+++ b/authentication/templates/auth.html
@@ -1,5 +1,4 @@
 {% load static %}
-<h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
 <head>
     <!-- CSS CUSTOM -->
     <link rel="stylesheet" href="{% static 'css/auth_page.css' %}">
@@ -8,31 +7,26 @@
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
+			<br>
 			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
-			<button>Sign Up</button>
+			<br>
+			<br>
+			<input type="text" placeholder="Name" id="signup-username"/>
+			<input type="email" placeholder="Email" id="signup-email"/>
+			<input type="password" placeholder="Password" id="signup-password"/>
+			<button type="button" id="signup-btn">Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
 		<form action="#">
-			<h1>Sign in</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
+			<h1>Sign in</h1><br>
 			<span>or use your account</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<br>
+			<br>
+			<input type="text" placeholder="Username" id="signin-username"/>
+			<input type="password" placeholder="Password" id="signin-password"/>
 			<a href="#">Forgot your password?</a>
-			<button>Sign In</button>
+			<button type="button" id="signin-btn">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
@@ -51,11 +45,11 @@
 	</div>
 </div>
 <script src="{% static 'js/auth_page.js' %}"></script>
-<footer>
+{% comment %} <footer>
 	<p>
 		Created with <i class="fa fa-heart"></i> by
 		<a target="_blank" href="https://florin-pop.com">Florin Pop</a>
 		- Read how I created this and how you can join the challenge
 		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
 	</p>
-</footer>
+</footer> {% endcomment %}
