--- a/cv_app/templates/dashboard.html
+++ b/cv_app/templates/dashboard.html
@@ -14,7 +14,7 @@
 
  </title>
 
- <link href="{% static './style.css' %}" rel="stylesheet"/>
+ <link href="{% static 'css/cv.css' %}" rel="stylesheet"/>
 
  </head>
 
@@ -66,7 +66,7 @@
 
  <!-- partial -->
 
- <script src="{% static './script.js' %}">
+ <script src="{% static 'js/cv.js' %}">
 
  </script>
 
