--- a/cv_app/templates/create_resume.html
+++ b/cv_app/templates/create_resume.html
@@ -346,7 +346,7 @@
 
  <br>
 
- <a class="button"style="background-color:red;" href="index">Back to home</a>
+ <a class="button"style="background-color:red;" href="/cv">Back to home</a>
 
  </form>
 
