--- a/cv_app/templates/dashboard.html
+++ b/cv_app/templates/dashboard.html
@@ -60,7 +60,7 @@
 
  </div>
 
- <a class="button" style="background-color:red;" id="logout"> Logout </a>
+ <a class="button" style="background-color:red;" id="logout"> Go To Home </a>
 
  </form>
 
@@ -72,7 +72,7 @@
     document.getElementById("logout").addEventListener("click",(e)=>
   {
     e.preventDefault();
-    window.location.href="/account/logout";
+    window.location.href="/";
   })
 </script>
  </body>
