--- a/resume_builder/templates/index.html
+++ b/resume_builder/templates/index.html
@@ -65,9 +65,8 @@
 					<div class="row">
 						<div class="col-md-1"></div>
 						<div class="col-md-10 wow fadeIn" data-wow-delay="0.3s">
-							<h1 class="text-upper">Software Landing Page</h1>
-							<p class="tm-white">Boxer is a fully Responsive, Clean Design, Modern, and Flexible Software Landing Page for startups, businesses and agencies. It is built with HTML5 &amp; CSS3, Bootstrap 3.3.4, Font Awesome 4.3.0, and much more. Designed by <a rel="nofollow" href="http://www.facebook.com/templatemo" target="_parent">templatemo</a>. Images by <a rel="nofollow" href="http://pixabay.com" target="_blank">Pixabay</a></p>
-							<img src="{% static 'images/software-img.png' %}" class="img-responsive" alt="home img">
+							<h1 class="text-upper">Welcome to Resume Builder</h1>
+							<p class="tm-white">A creative, professional resume can grab a recruiter's attention. Our resume layout makes sure all your content is aligned and organized so your resume looks like a work of art.</p>
 						</div>
 						<div class="col-md-1"></div>
 					</div>
@@ -110,7 +109,7 @@
 						<p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
-						<img src="images/software-img.png" class="img-responsive" alt="feature img">
+						<img src="C:\Users\maste\Documents\Resume_Builder\static\images\resume.jpg" class="img-responsive" alt="resume img">
 					</div>
 				</div>
 			</div>
@@ -178,11 +177,6 @@
 
 		<!-- start footer -->
 		<footer>
-			<div class="container">
-				<div class="row">
-					<p>Copyright © 2084 Your Company Name</p>
-				</div>
-			</div>
 		</footer>
 		<!-- end footer -->
 		{{ user.username|json_script:"username" }}
