--- a/resume_builder/templates/index.html
+++ b/resume_builder/templates/index.html
@@ -109,7 +109,7 @@
 						<p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
-						<img src="C:\Users\maste\Documents\Resume_Builder\static\images\resume.jpg" class="img-responsive" alt="resume img">
+						<img src="{% static 'images/resume.jpg' %}" class="img-responsive" alt="resume img">
 					</div>
 				</div>
 			</div>
@@ -121,7 +121,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-						<img src="images/software-img.png" class="img-responsive" alt="feature img">
+						<img src="{% static 'images/software_build.jpg'%}" class="img-responsive" alt="feature img">
 					</div>
 					<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<h2 class="text-uppercase">More of Your Software</h2>
